# conways-game-of-life.rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml
.run/: build-debug.run.xml  run-debug.run.xml  run-release.run.xml
src/: display.rs  game.rs  main.rs  render.rs
