[package]
name = "conways-game-of-life"
version = "0.0.1"
authors = ["Jake Marsden <jakemarsdenjm@gmail.com>"]
repository = "https://github.com/jakemarsden/conways-game-of-life.rs"
license = "MIT"
readme = "README.md"
publish = false
edition = "2018"

[[bin]]
name = "conways-game-of-life"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = true
panic = 'abort'

[dependencies]
rand = { version = "0.7", features = ["small_rng"] }
structopt = "0.3"
